css: added store name, fixed order/product alignment

--- a/src/App.css
+++ b/src/App.css
@@ -30,12 +30,17 @@ html:after {
 
 .header {
   background-color: #3dd28d;
-  height: 40px;
+  height: 60px;
   color: white;
 }
 
+.store-name {
+  font-size: 24px;
+  display: block;
+}
+
 .header-products, .header-orders {
-  padding: 11.4px 15px;
+  padding: 4px 15px;
   line-height: 40px;
 }
 
@@ -78,7 +83,7 @@ select {
 
 .product {
   display: inline-block;
-  margin: 5% auto;
+  margin: 4% auto;
 }
 
 .product-image {
@@ -103,13 +108,13 @@ select {
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: bold;
   font-size: 20px;
-  width: 200px;
+  width: 250px;
   margin: 0 auto;
 }
 
 .product-description {
   max-width: 75%;
-  width: 250px;
+  width: 300px;
   margin: 0 auto;
 }
 
@@ -117,4 +122,31 @@ select {
   max-width: 85%;
   margin: 0 auto;
   padding-top: 10px;
+}
+
+.submit-order {
+  display: block;
+  margin: 0 auto;
+}
+
+.add-to-order-span {
+  display: block;
+}
+
+.order-id {
+  display: block;
+}
+
+.order {
+  display: inline-block;
+  width: 300px;
+  margin: 4% auto;
+}
+
+.orders-page {
+  height: 1000px;
+}
+
+.end-of-page {
+  margin: 100px;
 }
